<resources>
    <string name="app_name">GitHatch</string>
    <string name="search">Search repositories</string>
    <string name="search_repos">Search Git Repos</string>
    <string name="no_repo_found">No repos found</string>
    <string name="fetching">Fetching..</string>
    <string name="Description">Description</string>
    <string name="name">Name</string>
    <string name="contributors">Top Contributors</string>
    <string name="repositories">Repositories</string>
    <string name="click_here">Click here to open</string>
    <string name="sorters">Sorting</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="updated">Last updated</string>
    <string name="apply">Apply</string>
    <string name="sort_by">Sort By</string>
    <string name="order_by">Order by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="clear">Clear</string>
    <string name="repo_details">Repo Details</string>
    <string name="contributor_details">Contributor Details</string>
    <string name="no_contributors">No Contributors</string>
    <string name="title_activity_home">GitHatch</string>
    <string name="watch_label">Watch</string>
    <string name="issues_label">Issues</string>
    <string name="fork_label">Fork</string>
    <string name="star_label">Star</string>
    <string name="update_label">Updated</string>

    <string name="author_repos_header">Most recent repositories by %1$s</string>
    <string name="twitter_link">https://twitter.com/%1$s</string>
    <string name="twitter_package">com.twitter.android</string>
    <string name="default_search_text">Kotlin</string>

    <string name="image">image</string>
    <string name="desc">Being the savage\'s bowsman, that is, the person who pulled the
    bow-oar in his boat. Dolor sit amet.</string>

    <string name="italic">Friday 12 FEB.</string>
    <string name="duplicate">DUPLICATE</string>
    <string name="schedule">SCHEDULE</string>
    <string name="delete">DELETE</string>


    <string name="not_available">n/a</string>
    <string name="loading_repositories">Loading repositories...</string>
    <string name="no_description_provided">No description provided</string>
    <string name="author">Author</string>
    <string name="language">Language</string>
    <string name="initial_commit">Initial Commit</string>
    <string name="last_update">Last Update</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repos">Repos</string>
    <string name="gists">Gists</string>
    <string name="email">Email</string>
    <string name="twitter">Twitter</string>
    <string name="link">Link</string>
    <string name="no_description_message">No description provided</string>
</resources>