<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.example.githatch.custom.FlipView
        android:id="@+id/myFlipView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="@dimen/three"
            app:cardBackgroundColor="@color/cardview"
            app:cardCornerRadius="@dimen/two">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/lbDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/creator_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/Description"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@id/lbDescription"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:textAlignment="center" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="@dimen/three"
            app:cardBackgroundColor="@color/cardview"
            app:cardCornerRadius="@dimen/two">

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/eight"
                android:textColor="#33BBFF" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight"
                android:padding="@dimen/zero">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivRepoAuthor"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="@dimen/one"
                    app:layout_constraintBottom_toTopOf="@id/clBottomSheet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvRepoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toTopOf="@id/clBottomSheet"
                    app:layout_constraintStart_toEndOf="@+id/ivRepoAuthor"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/creator_text"
                    app:layout_constraintStart_toEndOf="@+id/ivRepoAuthor"
                    app:layout_constraintTop_toBottomOf="@+id/tvRepoName" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_bottom"
                    android:padding="@dimen/five"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/ivWatch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@+id/lbWatch"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_star" />

                    <TextView
                        android:id="@+id/lbWatch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star_label"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvWatch"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/ivWatch"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvWatch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ivIssue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/lbWatch"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/ivIssue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@+id/lbIssue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tvWatch"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_issue" />

                    <TextView
                        android:id="@+id/lbIssue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issues_label"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvIssue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/ivIssue"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvIssue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ivFork"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/lbIssue"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivFork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/lbFork"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tvIssue"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_fork" />

                    <TextView
                        android:id="@+id/lbFork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fork_label"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvFork"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/ivFork"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/lbFork"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </com.example.githatch.custom.FlipView>

</layout>